tests/checker/fail/function_returns_wrong_type.can
Message = Int

Unit => Message {
    "not an int"
}

Unit => Program {
    Message()
    "ok" -> Print
}
